fixes weird svg render gaps

--- a/src/styles/_wheel.scss
+++ b/src/styles/_wheel.scss
@@ -6,11 +6,17 @@
         
         path {
             fill: none;
-            stroke-width: 10px;
+            stroke-width: 25px;
             transition: .2s;
+            stroke-linecap: round;
+
+            &:first-child,
+            &:last-child, {
+                stroke-linecap: butt;
+            }
 
             &.current {
-                stroke-width: 20px;
+                stroke-width: 50px;
             }
         }
     }
